Fix form fields to be full width on mobile

--- a/src/assets/css/_forms.css
+++ b/src/assets/css/_forms.css
@@ -29,16 +29,6 @@
       gap-y-2;
   }
 
-  .upgrade-select {
-    @apply w-28;
-  }
-
-  .upgrade-select label {
-    @apply
-      flex
-      items-end;
-  }
-
   .set + .set {
     @apply
       mt-6
@@ -59,12 +49,6 @@
       mt-1
       p-4
       pb-2
-  }
-
-  .set-upgrades.vertical {
-    @apply
-      flex-col
-      items-start;
   }
 
   .row + h1,
@@ -100,30 +84,5 @@
 
   .engine .control {
     min-width: 100px;
-  }
-
-  .control .prefix,
-  .control .suffix {
-    @apply
-      text-yellow
-      absolute
-      top-0
-      bottom-0
-      flex
-      items-center
-      mb-0;
-  }
-
-  .control .prefix + input,
-  .control .prefix + select {
-    @apply indent-4;
-  }
-
-  .control .prefix {
-    @apply left-3;
-  }
-
-  .control .suffix {
-    @apply right-4;
   }
 }
